Updated api routes as per REST API convention and created 3 more routes for deleting employee, getting a leave by it's ID and fetching leaves for a particular employee with admin access only.
